Changes for 4.2.0alpha3

New features:
..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)

Bug fixes:
A......... [ZBX-15359] fixed undefined index in maintenance.create and maintenance.update API calls (Sasha)
A......... [ZBX-15358] fixed undefined index in configuration.import API call without one or several rules (Sasha)
A......... [ZBX-15355] fixed undefined index in configuration.import API call (Sasha)
A......... [ZBX-14926] fixed empty "inventory" property being returned by API if inventory mode is disabled (agriscenko)
A......... [ZBX-15354] fixed undefined index in API calls without "auth" parameter (Sasha)
...G...PS. [ZBX-15399] fixed IPv4 connections not being accepted when IPv6 mask is used (akozlovs)
A......... [ZBX-14331] fixed error allowed to change interface type which is already used by items (gcalenko)
........S. [ZBX-15241] fixed escaping regexp symbols in preprocessing output parameter when creating item by LLD (asitals)
..F....... [ZBX-15254] fixed incorrect matching string highlight in multiselect autocomplete box (ashubin, vasilijs)
..F....... [ZBX-15136] fixed displaying 'Plain text' on the dashboard as html (vasilijs)
A.F....... [ZBX-14592] fixed calculation of SLA and availability report when problem has negative duration (miks)
........S. [ZBX-15400] fixed possible crash in preprocessing manager when items with change/throttle preprocessing steps were not being monitored anymore (wiper)
..F....... [ZBX-13804] fixed generic popup form submission (miks)
........S. [ZBX-15313] fixed unit suffix support in calculated item expressions (kalimulin)
A......... [ZBX-15156] fixed undefined offset error in host screen with web item (talbergs)
A......... [ZBX-14980] fixed problem with filter by itemids and hostids in history.get (vasilijs, vmurzins)

--------------------------------------------------------------------------------
Changes for 4.2.0alpha2

New features: